:bug: remove small gap from arrow and line, :lipstick: text sizing

--- a/src/shared/nt-results/Node.styl
+++ b/src/shared/nt-results/Node.styl
@@ -1,8 +1,11 @@
 @require '../nt-design/colorsets'
 
 .nt
-  text
+  &__type
     fill c-red500
+
+  &__data
+    fill c-red300
 
   rect
     cursor pointer
