--- a/src/shared/nt-results/ResultsByLoad.styl
+++ b/src/shared/nt-results/ResultsByLoad.styl
@@ -19,24 +19,13 @@
     padding 15px 0
     width 100%
 
-  &__menu
-    position absolute
-    top 30px
-    right 20px
-
-  &__menuItem
-    margin 5px 0
-    padding 5px 20px
-    background-color white
-    cursor pointer
-
     &:hover
       background-color c-teal400
 
   &__pathSelector
     position absolute
     top 30px
-    right 140px
+    right 20px
     bottom 30px
     overflow-y auto
     padding-right 15px
